<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeRefresh"
    tools:context=".ui.ProductListActivity">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#F4FFFD"
            android:paddingTop="@dimen/_10sdp">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/products"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


            <LinearLayout
                android:id="@+id/addproductClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/button_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <EditText
                android:id="@+id/productSerach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background_border"
                android:drawableStart="@drawable/serch_icon"
                android:hint="@string/search"
                android:inputType="text|textCapWords"
                android:maxLength="40"
                android:maxLines="1"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textSize="@dimen/_12sdp" />





        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ProductListRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp" />

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>








</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>